# lecture-notes

./: README.md  Untitled Diagram.drawio
C++/1/: casting  const and referencing  default arguments  function overloading  input output  new and delete
C++/2/: constructors  copy constructor  destructors  initialization list
C++/3/: operator overloading  rationals  set
C++/tutorial/1/: const pointer  namespace  references.cpp
C++/tutorial/2/: throw catch
C/1/: constants.c  enumeratros.c  multi-file projects.txt  preprocessor
C/1/example/: functions.h  main.c
C/2/: assert  structures  typedef
C/3/: const and pointers  dynamic memory allocation  pointers to functions
C/tutorial/1/: arg.txt  contacts.txt  pointers.txt  step1.c  structures and typedef.txt
C/tutorial/2/: Compiling  Nodes and Stacks  makefile  swapping nodes
Debugging workshop/: rename
Debugging workshop/1/: CMakeLists.txt  WaterBender.cpp  WaterBender.h  flag_generator.cpp  flag_generator.h  main.cpp  printingLib.cpp  printingLib.h
